--- a/package.json
+++ b/package.json
@@ -10,5 +10,21 @@
   },
   "devDependencies": {
     "vite": "^7.0.4"
-  }
+  },
+  "description": "A responsive, customisable password generator built with JavaScript, HTML, and CSS. Users can generate secure random passwords between 5 and 20 characters with customisable options and switch between light and dark themes.",
+  "main": "index.js",
+  "dependencies": {
+    "esbuild": "^0.25.6",
+    "fdir": "^6.4.6",
+    "nanoid": "^3.3.11",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss": "^8.5.6",
+    "rollup": "^4.45.1",
+    "source-map-js": "^1.2.1",
+    "tinyglobby": "^0.2.14"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
